Update game service's cors. Add admin create game, connect websocket

--- a/client/src/views/res/configs.json
+++ b/client/src/views/res/configs.json
@@ -1,4 +1,5 @@
 {
   "port": 4000,
-  "websocket_host": "ws://localhost:3000"
+  "websocket_host": "ws://localhost:3000",
+  "game_service_host": "http://localhost:3001"
 }
