--- a/client/config/configs.json
+++ b/client/config/configs.json
@@ -1,4 +1,7 @@
 {
     "port": 4000,
-    "websocket_host": "ws://localhost:3000"
+    "websocket_host": "ws://localhost:3000",
+    "game_service_host": "http://localhost:3001",
+    "leaderboard_service_host": "http://localhost:3002",
+    "answer_service_host": "http://localhost:3003"
 }
