--- a/game_state_service/package.json
+++ b/game_state_service/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "lodash": "^4.17.21",
-    "redis": "^4.6.15",
-    "uuid": "^10.0.0"
+    "redis": "^4.6.15"
   }
 }
