Add Pub/Sub to handle user enter game

--- a/client/config/configs.json
+++ b/client/config/configs.json
@@ -1,7 +1,5 @@
 {
     "port": 4000,
     "websocket_host": "ws://localhost:3000",
-    "game_service_host": "http://localhost:3001",
-    "leaderboard_service_host": "http://localhost:3002",
-    "answer_service_host": "http://localhost:3003"
+    "game_service_host": "http://localhost:3001"
 }
